# zipp-next

./: .editorconfig  Cargo.toml  README.md
apps/studioUIKit/: package.json  pnpm-lock.yaml  tailwind.config.js
apps/studioUIKit/src/lib/: utils.ts
apps/studioUIKit/src/lib/components/docs/: table.svelte
apps/studioUIKit/src/lib/registry/button/: button.svelte  index.ts
apps/studioUIKit/src/lib/registry/editor/: block.svelte  editor.svelte  editor.ts  ui.ts
apps/studioUIKit/src/lib/registry/editor/blockMenu/: blockMenu.svelte
apps/studioUIKit/src/lib/registry/editor/blocks/: component.svelte  relation.svelte  text.svelte
apps/studioUIKit/src/lib/registry/editor/blocks/fields/: component.svelte  relation.svelte  text.svelte
apps/studioUIKit/src/lib/registry/editor/contextMenu/: contextMenu.svelte
apps/studioUIKit/src/routes/: +page.svelte
apps/studioUIKit/src/routes/editor/: +page.svelte
apps/studioUIKit/src/routes/playground/: +page.svelte
apps/studioUIKit/src/styles/: globals.css
apps/zipp/: .gitignore  Cargo.toml
apps/zipp/src/: main.rs
apps/zipp/src/components/: component_store.rs  default_field_kinds.rs  error.rs  field_kinds.rs  json_storage.rs  mod.rs
apps/zipp/src/components/instances/: error.rs  mod.rs
apps/zipp/src/components/instances/persistent/: memory.rs  mod.rs
apps/zipp/src/components/schemas/: error.rs  mod.rs  schema.rs
apps/zipp/src/components/schemas/persistent/: json.rs  memory.rs  mod.rs
apps/zipp/src/components_instances/: mod.rs
apps/zipp/src/components_instances/persistent/: mod.rs
apps/zipp/src/fields/: defaults.rs  error.rs  field.rs  kind.rs  mod.rs  schema.rs
apps/zipp/src/fields/defaults/: mod.rs  number.rs  text.rs
apps/zipp/src/users/: api.rs  mod.rs
apps/zipp/src/users/api/: error.rs  handlers.rs  mod.rs
apps/zipp/src/users/migrations/: 00-snapshot.sql  users-00-create.sql
apps/zipp/src/users/persistent/: memory.rs  mod.rs  postgres.rs
apps/zipp/src/utils/: as_any.rs  mod.rs
apps/zipp/testfiles/: components.json
apps/zipp/testfiles/components/: goal.json  minimal.json  minimal2.json  test_load.json
crates/database/: Cargo.toml
crates/database/src/: error.rs  id.rs  lib.rs  macros.rs
crates/database/src/adaptor/: mod.rs  types.rs
crates/database/src/adaptor/memory/: components.rs  mod.rs  schema.rs
crates/database/src/memory/: components.rs  mod.rs  schema.rs
crates/database/src/migrations/: mod.rs
crates/database/src/postgres/: error.rs  mod.rs
crates/database/src/types/: component.rs  guards.rs  id.rs  mod.rs  query.rs  schema.rs
crates/database/tests/: schema.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: lib.rs
docs/: database.md
