[package]
name = "zipp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
clap = { version = "4.5.4", features = ["derive"] }
fire-http = { version = "0.4.2", features = ["fs", "json"] }
tokio = { version = "1.37.0", features = [
	"macros",
	"rt-multi-thread",
	"fs",
	"time",
	"sync",
	"io-util",
	"net",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
database = { version = "0.1.0", path = "../../crates/database", features = [
	"memory",
] }
email_address = "0.2.4"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
toml = "0.8.12"
fire-http-api = "0.3.1"
