[package]
name = "database"
version = "0.1.0"
edition = "2021"

[features]
memory = []

[dependencies]
async-trait = "0.1.79"
base64 = "0.22.0"
chrono = "0.4.37"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "sync"] }
tracing = "0.1.40"
