[package]
name = "database"
version = "0.1.0"
edition = "2021"

[features]
memory = []

[dependencies]
async-trait = "0.1.79"
base64 = "0.22.0"
chrono = "0.4.37"
deadpool = "0.11.0"
deadpool-postgres = "0.13.0"
indexmap = "2.2.6"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "sync"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
